# Cherenkov-detector-parameterization

./: CMakeLists.txt  DetectorConstruction.cc  DetectorConstructionAltered.cc  EventAction.cc  EventAction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  README.md  RunAction.cc  RunAction.hh  SensitiveDetector.cc  SteppingAction.cc  SteppingAction.hh  main.cc  vis.mac
